@@ -1,6 +1,8 @@
 04/22/2004  version 0.1.68  Ian Lewis <IanLewis@member.fsf.org>
 
     * Fixed a build problem that was introduced into cvs.
+    * Fixed bug where jsxe generated NumberFormatExceptions if user defined
+      saved properties were incorrectly formatted.
 
 04/21/2004  version 0.1.67  Ian Lewis <IanLewis@member.fsf.org>
 
